Bug 41992 - FILESAVE as pptx corrupts file
Summary: FILESAVE as pptx corrupts file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.4.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard:
Keywords:
Depends on: 32709
Blocks:
  Show dependency treegraph
 
Reported: 2011-10-19 02:35 UTC by niktrs
Modified: 2012-10-09 08:25 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Save this file as pptx from impress and try to open it with microsoft office (72.50 KB, application/vnd.ms-powerpoint)
2011-10-19 02:35 UTC, niktrs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description niktrs 2011-10-19 02:35:34 UTC
Created attachment 52520 [details]
Save this file as pptx from impress and try to open it with microsoft office

In impress, when you save a powerpoint file, originally created from powerpoint, as pptx, corrupts the file.

The file cannot be opened with microsoft office and in libreoffice, some objects (arrows in this case) are missing.
Comment 1 tester8 2011-10-20 12:54:34 UTC
Reproduced with

LO 3.4.3 OOO340m1 (Build:302)
Ubuntu 10.04.3 x86
Linux 2.6.32-34-generic Russian UI

Confirm missing arrows. Opening in MO not tested.
Comment 2 Christophe Strobbe 2012-01-27 08:53:15 UTC
I reproduced the issue while trying to confirm bug 43547 in LibreOffice 3.5.0 RC1: there are no images in the presentation when PPTX exported from Impress/ODP is opened again LibreOffice 3.4.3 or 3.5.0 RC1. When opening the PPTX in Office 2010, PowerPoint reports that: "PowerPoint found a problem with the content in filename.pptx]. PowerPoint can attempt to repair the presentation. If you trust the source of this presentation, click Repair."
(When unzipping the PPTX file to inspect the XML, there is no p:pic element for
the image, nor a p:cNvPr element for the title or the description.)
Comment 3 Rainer Bielefeld Retired 2012-03-31 00:56:54 UTC
Currently we can't tell what kind of problem this exactly is, when I do an export with "LibreOffice 3.5.2.2 German UI/Locale [Build-ID: 281b639-6baa1d3-ef66a77-d866f25-f36d45f] on German WIN7 Home Premium (64bit) the resulting document seems to be corrupted, can not be opened by MS PP Viewer Version 14.

An indication for an additional FILESAVE problem is that OOo 3.4Beta opens my export result also with missing arrows. 

Depends on "Bug 32709 - FILESAVE as PPT/PPTX indicated as corrpupted by MS PowerPoint Viewer and MS Office Web Apps" for now
Comment 4 Rainer Bielefeld Retired 2012-03-31 00:58:58 UTC
We will have to check again after "Bug 32709" has been fixed.
Comment 5 sasha.libreoffice 2012-04-14 00:45:03 UTC
Reproduced in 3.5.2 on Fedora 64 bit and in 3.4.3 on Windows 7 32 bit
Produced pptx file msOffice and Corel Office can not open. Both do not tell where exactly problem is.
Comment 6 dE 2012-05-13 08:38:50 UTC
I suggest the pptx export feature be disable (by default) and marked 'experimental', no use annoying users with the horribly broken feature and hidden surprises.

Also following the nature of this bug, it should be marked critical.
Comment 7 sasha.libreoffice 2012-05-14 02:09:02 UTC
> I suggest the pptx export feature be disable (by default) and marked
> 'experimental', no use annoying users with the horribly broken feature and
> hidden surprises.
I agree. Good idea. 
What is interesting: msOffice 2007 opens odp document without problem, but can not open pptx file after LibreOffice
Comment 8 Not Assigned 2012-08-15 11:37:41 UTC
Radek Doulik committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=57e8f53e4f6ecfbedef4d2922935a7f7b2f467b3

call WriteTransformation with namespace id, fixes part of fdo#41992
Comment 9 Not Assigned 2012-08-15 12:00:32 UTC
Radek Doulik committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3228062c517d886a78572d7162bc661fb41e9a32

avoid writing empty p:childTnLst elements, fixes rest of fdo#41992
Comment 10 Radek Doulik 2012-08-15 12:01:19 UTC
I have fixed this bug in master branch today.
Comment 11 sasha.libreoffice 2012-08-16 06:48:26 UTC
Thanks for fixing this bug
Comment 12 dE 2012-08-21 05:34:01 UTC
Finally! Thanks for the fix!
Comment 13 Kevin 2012-10-08 22:37:23 UTC
What version of LibreOffice includes this fix please?

I have just reopened a PPTX presentation I created in Impress (English GB) Version 3.6.2.2 (Build ID: da8c1e6) running on Windows 7 Home Premium 64-bit operating system and all the JPG pictures inserted from files have gone missing.

Tried opening with PowerPoint and it prompts to repair the file. It can't though. I've opened the file as a ZIP file and there is no reference to the JPG pictures.

Needless to say not happy. First time using Impress and dare I say it, not impressed (pun intended - trying to keep smiling!).
Comment 14 sasha.libreoffice 2012-10-09 05:47:57 UTC
> What version of LibreOffice includes this fix please?
3.7.0
Comment 15 Kevin 2012-10-09 08:25:14 UTC
Thanks Sasha.

3.7 RC1 due January I believe, if I can work out how to download betas/RCs!

In the meantime I'll see if saving as PPT retains the embedded JPGs.