use a namespace for xfrm transformation element, fixes part of fdo#41992

Change-Id: I3872028e4204ae5f72942b7345bf881ef3a96752